<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_gamepad"
            android:title="@string/menu_game"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_magnify"
            android:title="@string/menu_search"/>
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_cards"
            android:title="@string/menu_collection"/>
        <item
            android:id="@+id/nav_libraries"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_libraries"/>
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_heart_outline"
            android:title="@string/menu_wish"/>

        <item
            android:id="@+id/nav_sets"
            android:icon="@drawable/ic_view_list"
            android:title="@string/menu_spoilers"/>
    </group>

    <group
        android:id="@+id/menu_secondary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>

    </group>
</menu>
