<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp">

    <Spinner
        android:id="@+id/spn_card_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/ib_count_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/minus"
            android:src="@drawable/ic_minus"
            android:tint="@color/colorTextMain"/>

        <TextView
            android:id="@+id/tv_cards_count"
            style="@style/TextView.Main.Title"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/count_one"
            tools:text="1"/>

        <ImageButton
            android:id="@+id/ib_count_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/plus"
            android:src="@drawable/ic_plus"
            android:tint="@color/colorTextMain"/>
    </LinearLayout>
</LinearLayout>
